# fasjson

./: .cico.pipeline  .coveragerc  .dockerignore  .gitignore  .mergify.yml  .packit.yaml  .pre-commit-config.yaml  .readthedocs.yml  .rstcheck.cfg  Dockerfile  MANINFEST.in  Makefile  README.md  Vagrantfile  docker.txt  documentation.html  fasjson.spec  pyproject.toml  pytest.ini  python-fasjson.spec  renovate.json  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml  pull-request-template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug-report.md  user-story.md
.github/workflows/: dependabot-approve.yml  main.yml  tests.yml
ansible/: fasjson.yml  playbook.yml
ansible/roles/dev/files/: .bashrc  fasjson.wsgi
ansible/roles/dev/tasks/: main.yml
ansible/roles/fasjson/files/: .bashrc  fasjson.wsgi  setup-fasjson-service.sh
ansible/roles/fasjson/files/config/: httpd-fasjson.conf
ansible/roles/fasjson/tasks/: main.yml
ansible/roles/freeipa/tasks/: main.yml
config/: gssproxy-fasjson.conf  httpd-fasjson.conf  systemd-httpd-service-fasjson.conf  tmpfiles-fasjson.conf
deploy/: httpd.conf  start.sh  wsgi.py
devel/: run-liccheck.sh
devel/ansible/: fasjson.yml  freeipa.yml
devel/ansible/roles/apache/defaults/: main.yml
devel/ansible/roles/apache/files/: redirect-to-ssl.conf
devel/ansible/roles/apache/handlers/: main.yml
devel/ansible/roles/apache/tasks/: main.yml
devel/ansible/roles/cert/tasks/: main.yml
devel/ansible/roles/common/tasks/: main.yml
devel/ansible/roles/fasjson/files/: .bashrc  bashrc  fasjson.wsgi
devel/ansible/roles/fasjson/files/config/: gssproxy-fasjson.conf  httpd-fasjson.conf
devel/ansible/roles/fasjson/tasks/: main.yml
devel/ansible/roles/fasjson/templates/: httpd.conf  setup-fasjson-service.sh
devel/ansible/roles/freeipa/tasks/: main.yml
devel/ansible/roles/ipa-client/tasks/: main.yml
devel/ansible/roles/ipa-keytab/defaults/: main.yml
devel/ansible/roles/ipa-keytab/tasks/: main.yml
docs/: api_v1.rst  conf.py  improved-usage  index.rst  installation.rst  make-requirements.sh  release_notes.md  release_notes.rst  requirements.txt  usage.rst
docs/_static/: custom.css
docs/utils/: export_swagger.py  ipa.ca.crt
fasjson/: __init__.py
fasjson/healthz/: __init__.py  healthcheck.py  healthz.py  pyproject.toml
fasjson/lib/: ldaputils.py
fasjson/lib/ldap/: __init__.py  client.py  converters.py  models.py
fasjson/tests/: conftest.py
fasjson/tests/fixtures/: fasjson.cfg  fasjson.env  ipa.default.conf
fasjson/tests/unit/: test_lib_ldap.py  test_lib_ldap_client.py  test_lib_ldap_converters.py  test_lib_ldap_result.py  test_lib_ldaputils.py  test_web_app.py  test_web_base_routes.py  test_web_errors.py  test_web_extension_gss.py  test_web_extension_ipacfg.py  test_web_namespace.py  test_web_resource_base.py  test_web_resource_v1_certs.py  test_web_resource_v1_groups.py  test_web_resource_v1_health.py  test_web_resource_v1_me.py  test_web_resource_v1_search.py  test_web_resource_v1_users.py  test_web_util_ipa.py  test_web_util_ldap.py  test_web_utils_pagination.py  utils.py  web_resource_v1_root.py
fasjson/web/: app.py  base_routes.py  defaults.cfg  errors.py  response.py  utils.py
fasjson/web/apis/: base.py  errors.py  v1.py
fasjson/web/apis/v1/: app.py
fasjson/web/apis/v1/resources/: __init__.py  groups.py  me.py  root.py  users.py
fasjson/web/extensions/: flask_gss.py  flask_ipacfg.py  flask_ldapconn.py
fasjson/web/resources/: base.py  certs.py  groups.py  health.py  me.py  search.py  users.py
fasjson/web/utils/: __init__.py  ipa.py  pagination.py  request_parsing.py
news/: +fix-get_user_groups.bug  +ruff.dev  +search-website-rss.feature  +search_groups.feature  +tinystage.dev  144.feature  186.feature  188.bug  213.feature  257.bug  266.feature  288.dev  348.feature  370.feature  399.bug  444.bug  558.feature  645.feature  6698d1c.other  719.feature  PR332.dependencies  PR343.dev  PR343.feature  _template.md.j2  _template.rst.j2  get-authors.py  pmoura.author  presence-match.feature
specs/: openapi.yaml  swagger.json  swagger.yaml
src/fasjson/: __init__.py
src/fasjson/lib/: __init__.py  gss.py  ipacfg.py  ldapconn.py
src/fasjson/plugins/: __init__.py  gss.py  ldapconn.py
src/fasjson/web/: app.py  errors.py  response.py
src/fasjson/web/apis/v1/: app.py
src/fasjson/web/apis/v1/resources/: groups.py  me.py
src/fasjson/web/extensions/: flask_ipacfg.py  flask_ldapconn.py
src/fasjson/web/resources/: __init__.py  base.py  me.py
test/: conftest.py
test/fixtures/: ipa.default.conf
test/unit/: test_lib_ldaputils.py  test_web_app.py  test_web_errors.py  test_web_resource_v1_groups.py  test_web_resource_v1_me.py  test_web_resource_v1_root.py  test_web_resource_v1_users.py  web_resource_v1_root.py
